# news-aggregator

./: .gitignore  CLAUDE.md  README.md  aggregate_news.py  hugo.toml  pyproject.toml  script.sh
.claude/: settings.json
.claude/commands/: add-feed.md
.claude/hooks/: sync_feeds_readme.py
.github/workflows/: daily-news.yml  sync-feeds-readme.yml  weekly-news.yml
config/: feeds-mine.yaml  feeds.yaml
content/: about.md  costs.md  how-it-works.md  sources.md
content/posts/: 2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  (+3 more)
data/: costs.json
layouts/_markup/: render-codeblock-mermaid.html
layouts/partials/: extend_footer.html  extend_head.html
reports/: 2026-04-22.html  2026-04-22.md  2026-04-23.html  2026-04-23.md  2026-04-24.html  2026-04-24.md  2026-W18.html  2026-W18.md  2026-W19.html  2026-W19.md  2026-W20.html  2026-W20.md  2026-W21.html  2026-W21.md  2026-W22.html  2026-W22.md  2026-W23.html  2026-W23.md  seen.json
scripts/: manual-test.sh  record_cost.py
templates/: digest-template.html
(+7 files in other folders)
