[project]
name = "news-aggregator"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
news-aggregator = "news_aggregator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_aggregator"]
